Fri Jul 12 00:51:09 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_eval): fixed line number in string interpolation.

	* parse.y (str_extend): ditto.

Thu Jul 11 21:30:38 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (yylex): should pushback proper char after '<<'.

Thu Jul 11 09:00:43 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_slice_bang): if there's no corresponding
	  substring, slice! should return nil without exception.

Fri Jul  5 09:17:00 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_split_m): accept separator value nil as well.

Fri Jul  5 05:00:40 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#initialize): improvement for mod_ruby.
	thanks to Sean Chittenden <sean@ruby-lang.org>, Shugo Maeda
	<shugo@modruby.net>

Wed Jul  3 02:32:31 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#initialize): improvement for mod_ruby.

Tue Jul  2 14:53:10 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (include_class_new): module may be T_ICLASS; retrieve
	  original module information.

Tue Jul  2 14:13:11 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#header): accept any type as value.

Sun Jun 30 17:05:29 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (seekdir, telldir): add ac_cv_func_telldir=yes,
	  ac_cv_func_seekdir=yes for MinGW.

Fri Jun 28 00:51:19 2002  NAKAMURA Usaku <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_stat): fix buffer overflow. (ruby-bugs:PR#329)

Thu Jun 27 03:42:04 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_expr_str): need to process backslashes properly.

Tue Jun 25 18:40:50 2002  KONISHI Hiromasa <konishih@fd6.so-net.ne.jp>

	* dln.c: remove definition rb_loaderror().

Thu Jun 20 21:09:37 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* ext/readline/readline.c (readline_readline): get rid of
	  libreadline's bug. (ruby-bugs-ja:PR#268)
