@@ -1,3 +1,8 @@
+Tue Jul 30 15:24:07 2002  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* ext/tcltklib/stubs.c (ruby_tcltk_stubs): win32_getenv returns
+	  the same address always, so allocate string by ruby_strdup.
+
 Fri Jul 12 00:51:09 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>
 
 	* eval.c (rb_eval): fixed line number in string interpolation.
